fixes #626 changing height to min-height to allow boxes to flow over when buttons wrap

--- a/app/assets/stylesheets/libraries/_mixins.scss
+++ b/app/assets/stylesheets/libraries/_mixins.scss
@@ -64,7 +64,7 @@
 
 
 @mixin grid-core-span-height($columns, $gridColumnWidth, $gridGutterWidth) {
-  height: ($gridColumnWidth * $columns) + ($gridGutterWidth * ($columns - 1));
+  min-height: ($gridColumnWidth * $columns) + ($gridGutterWidth * ($columns - 1));
   margin-bottom: $gridGutterWidth;
 }
 
